--- a/style.css
+++ b/style.css
@@ -39,6 +39,19 @@ a:hover {
   z-index: 2;
 }
 
+#msgRight{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-color: white;
+  border: 2px solid black;
+  padding: 5px;
+  width: 100px;
+  height: 100px
+  display: none;
+  z-index: 2;
+}
+
 .close-button{
   cursor: pointer;
   float: right;
