added loading and some images rename

--- a/style.css
+++ b/style.css
@@ -27,6 +27,15 @@ a:hover {
   width: 300px;
 }
 
+#welcomeScreen{
+	background: url(./images/startscreen.png); width: 760px; height: 600px; position: absolute; z-index: 100;
+}
+#welcomeScreenWrap{
+	position: absolute; top: 300px; width: 760px; color: white;
+}
+
+position: relative; left: 100px; height: 15px; width: 0px; background: red;
+
 #msg{
   position: absolute;
   top: 570px;
